--- a/.github/workflows/checks.yaml
+++ b/.github/workflows/checks.yaml
@@ -17,5 +17,5 @@ jobs:
         run: rustup --quiet toolchain install --profile minimal stable nightly
       - uses: Swatinem/rust-cache@v2
       - name: Build
-        run: cargo build --all-targets --all-features --locked
+        run: cargo build --all-targets --all-features
 
